# clodure_oriented_api

./: .gitignore  ARCHITECTURE.md  CLEAN_ARCHITECTURE_DISCUSSION.md  Cargo.toml  Dockerfile  README.md  docker-compose.yml  export_users.sh  generate_random_users.sh  memory_monitoring_and_load_testing.sh  result-analysis.ipynb
crates/application/: Cargo.toml
crates/application/src/: lib.rs
crates/cores/: Cargo.toml
crates/cores/src/: lib.rs
crates/domain/: Cargo.toml
crates/domain/src/: lib.rs
crates/infrastructure/: Cargo.toml
crates/infrastructure/src/: lib.rs
crates/presentation/: Cargo.toml
crates/presentation/src/: lib.rs
src/: main.rs
