[package]
name = "clodure_oriented_api"
version = "0.1.0"
edition = "2021"

[dependencies]
warp = "0.3.7"
tokio = { version = "1.35.1", features = ["full"] }
serde = { version = "1.0.195", features = ["derive"] }
serde_json = "1.0.111"
rusqlite = { version = "0.36.0", features = ["bundled"] }
r2d2 = "0.8.10"
r2d2_sqlite = "0.30.0"
r2d2_mysql = "24"
thiserror = "2.0.12"
uuid = { version = "1.6.1", features = ["v4", "serde"] }
tracing = "0.1.41"
tracing-subscriber = "0.3.19"
anyhow = "1.0.98"
log = "0.4.27"
env_logger = "0.10.1"
mysql = "26.0.0"

[dependencies.application]
path = "crates/application"

[dependencies.cores]
path = "crates/cores"

[dependencies.domain]
path = "crates/domain"

[dependencies.infrastructure]
path = "crates/infrastructure"

[dependencies.presentation]
path = "crates/presentation"


[workspace]
members = [
    "crates/domain",
    "crates/application",
    "crates/infrastructure",
    "crates/presentation",
    "crates/cores"
]

