[package]
name = "presentation"
version = "0.1.0"
edition = "2021"

[dependencies]
domain = { path = "../domain" }
application = { path = "../application" }
warp = "0.3.7"
tokio = { version = "1.35.1", features = ["full"] }
serde = { version = "1.0.195", features = ["derive"] }
serde_json = "1.0.111"
uuid = { version = "1.6.1", features = ["v4", "serde"] }
